--- a/arch/arm/configs/cyanogenmod_tuna_defconfig
+++ b/arch/arm/configs/cyanogenmod_tuna_defconfig
@@ -285,7 +285,7 @@ CONFIG_ARCH_OMAP2PLUS=y
 #
 # OMAP Feature Selections
 #
-CONFIG_OMAP_RPMSG=y
+CONFIG_OMAP_RPMSG=m
 CONFIG_OMAP_RPMSG_RECOVERY=y
 CONFIG_OMAP_SMARTREFLEX=y
 CONFIG_OMAP_SMARTREFLEX_CLASS3=y
@@ -2350,14 +2350,14 @@ CONFIG_OMAP_REMOTE_PROC=y
 CONFIG_OMAP_RPRES=y
 CONFIG_REMOTEPROC_WATCHDOG=y
 CONFIG_REMOTEPROC_CORE_DUMP=y
-CONFIG_VIRTIO=y
-CONFIG_VIRTIO_RING=y
+CONFIG_VIRTIO=m
+CONFIG_VIRTIO_RING=m
 # CONFIG_VIRTIO_BALLOON is not set
-CONFIG_RPMSG=y
-CONFIG_RPMSG_OMX=y
+CONFIG_RPMSG=m
+CONFIG_RPMSG_OMX=m
 CONFIG_RPMSG_RESMGR=y
-# CONFIG_RPMSG_CLIENT_SAMPLE is not set
-# CONFIG_RPMSG_SERVER_SAMPLE is not set
+CONFIG_RPMSG_CLIENT_SAMPLE=n
+CONFIG_RPMSG_SERVER_SAMPLE=n
 CONFIG_OMAP_HSI=y
 CONFIG_OMAP_HSI_DEVICE=y
 # CONFIG_OMAP_HSI_CHAR is not set
